# gdvr-mod

./: CMakeLists.txt  mod.json
.github/workflows/: build.yml
build-android64/: CMakeCache.txt
src/: OpenXRApp.cpp  OpenXRApp.hpp  main.cpp
